package pt.ipp.isep.dei.esoft.project.domain;

public class Employee {
    public Employee(String email) {
    }

    public boolean hasEmail(String email) {
    return false;
    }
}
