@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class AuthenticationRepository
{
    + getCurrentUserSession()
}

class UserSession
{
    + isLoggedInWithRole()
    + getUserId()
}



class Job {
    - String name
}

class Employee {
    - String name
    - Date birthdate
    - Date admission date
    - Address postalAddress
    - String phone
    - String email
    - String ID doc type
    - String ID document number
    - String Taxpayer ID
    - Job job
}



class Organization {
    - String name
    - String vatNumber
    - String phone
    - String email
    - Address postalAddress
    - addEmployee(Employee)
    - validateEmployee(Employee)
    + Organization(name, vatNumber, webSite, phone, email, postalAddress)
    + createEmployee(name,birthdate,admission date,Address,phone,email,Id doctype,Id number,taxpayer id)
    - getUserByEmail(email)
    + getJobList()

}


class OrganizationRepository {
    + getOrganizationByEmployeeEmail(email)
}

class Repositories {
    - Repositories()
    + getInstance() : Repositories
    + getOrganizationRepository()
    + getAuthenticationRepository()
    + getJobRepository()
}

class CreateEmployeeController {
    + CreateEmployeeController()
    + createEmployee(name)

}

note left of CreateEmployeeController
    - userEmail and userRole is obtained
    from the user session.
end note


class CreateEmployeeUI {
}

Repositories -> Repositories : instance
CreateEmployeeUI .> CreateEmployeeController
CreateEmployeeController .> Repositories : repositories
Repositories --> "1" OrganizationRepository
OrganizationRepository --> "*" Organization : organizations
AuthenticationRepository -> "1" UserSession : usersession
Repositories --> "1" AuthenticationRepository
Organization "1" --> "*" Job : owns
Organization "1" --> "*" Employee : owns
Employee "1" -> "1" Job : have



@enduml